--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="libs/owl-carousel/owl.theme.default.min.css">
 	<link rel="stylesheet" href="libs/owl-carousel/owl.carousel.min.css">
+	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/main.min.css">
-	<style>.header{background:#161616 url(img/header-bg.jpg) no-repeat center top / cover;padding:13px 0 205px}</style>
 	</head>
 <body>
-<header class="header">
+<header class="header" style="background:#161616 url(img/header-bg.jpg) no-repeat center top / cover;">
 	<div class="container">
 		<div class="row d-flex align-items-center">
 			<div class="col-6 col-sm-5 col-md-4 col-lg-3 col-xl-3">
