--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 	<title>ShapeUp</title>
 	<link rel="icon" href="img/logo.png" type="image/x-icon">
 	<link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
+
 	<link href="https://fonts.googleapis.com/css?family=Lato:400,700,900&display=swap" rel="stylesheet">
+	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="libs/owl-carousel/owl.theme.default.min.css">
@@ -17,7 +19,7 @@
 	<link rel="stylesheet" href="css/main.min.css">
 	</head>
 <body>
-<header class="header" style="background:#161616 url(img/header-bg.jpg) no-repeat center top / cover;">
+<header class="header" style="background:#161616 url(img/header-bg.jpg) no-repeat center top / cover;" data-value="1">
 	<div class="container">
 		<div class="row d-flex align-items-center">
 			<div class="col-6 col-sm-5 col-md-4 col-lg-3 col-xl-3">
@@ -29,28 +31,28 @@
 			<div class="col-lg-8 col-xl-7 ml-auto menu-grid">
 				<nav class="menu">
 					<ul class="d-flex">
-						<li>
+						<li data-value="1" class="active">
 							<a href="#">Home</a>
 						</li>
-						<li>
+						<li data-value="2">
 							<a href="#">About</a>
 						</li>
-						<li>
+						<li data-value="3">
 							<a href="#">Trainers</a>
 						</li>
-						<li>
+						<li data-value="4">
 							<a href="#">Service</a>
 						</li>
-						<li>
+						<li data-value="5">
 							<a href="#">Reviews</a>
 						</li>
-						<li>
+						<li data-value="6">
 							<a href="#">Price</a>
 						</li>
-						<li>
+						<li data-value="7">
 							<a href="#">Blog</a>
 						</li>
-						<li>
+						<li data-value="8">
 							<a href="#">Contact</a>
 						</li>
 					</ul>
@@ -83,7 +85,7 @@
 		</div>
 	</div>
 </header>
-<section class="about">
+<section class="about" data-value="2">
 	<div class="container">
 		<div class="row align-items-center">
 			<div class="col-md-6 col-sm-12">
@@ -107,7 +109,7 @@
 			</div>
 			<div class="col-md-6 col-sm-12">
 				<div class="video-thumbnail">
-					<div class="video-box">
+					<div class="video-box" data-aos="zoom-in">
 						<div class="video" id="video_third">
 							<img class="video__preview" src="img/video-03.jpg" alt="Fitness">
 							<span class="video__btn" id="video__btn_third"></span>
@@ -131,7 +133,7 @@
 		</div>
 	</div>
 </section>
-<section class="meet">
+<section class="meet" data-value="3">
 	<div class="container">
 		<div class="row">
 			<div class="col">
@@ -188,7 +190,7 @@
 		</div>
 	</div>
 </section>
-<section class="choose">
+<section class="choose" data-value="4">
 	<div class="container">
 		<div class="row">
 			<div class="col">
@@ -250,7 +252,7 @@
 		</div>
 	</div>
 </section>
-<section class="reviews">
+<section class="reviews" data-value="5">
 	<div class="container">
 		<div class="row">
 			<div class="col">
@@ -400,7 +402,7 @@
 		</div>
 	</div>
 </section>
-<section class="pricing">
+<section class="pricing" data-value="6">
 	<div class="container">
 		<div class="row">
 			<div class="col">
@@ -509,7 +511,7 @@
 		</div>
 	</div>
 </section>
-<section class="blog">
+<section class="blog" data-value="7">
 	<div class="container">
 		<div class="row">
 			<div class="col">
@@ -673,7 +675,7 @@
 		</div>
 	</div>
 </section>
-<section class="contact">
+<section class="contact" data-value="8">
 	<div class="container">
 		<div class="row">
 			<div class="col d-flex justify-content-between align-items-center flex-wrap">
@@ -870,8 +872,10 @@
   src="https://code.jquery.com/jquery-3.4.1.min.js"
   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
   crossorigin="anonymous"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="libs/owl-carousel/owl.carousel.min.js"></script>
-<script src="js/main.min.js"></script>
+<script src="js/main.js"></script>
+<script src="js/old.min.js"></script>
 </body>
 </html>
