--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 	<link rel="stylesheet" href="css/main.min.css">
 	</head>
 <body>
-<header class="header" style="background:#161616 url(img/header-bg.jpg) no-repeat center top / cover;" data-value="1">
+<header class="header">
 	<div class="container">
-		<div class="row d-flex align-items-center">
+		<div class="row">
 			<div class="col-6 col-sm-5 col-md-4 col-lg-3 col-xl-3">
-				<a class="logo-content d-flex align-items-center" href="index.html">
+				<a class="logo-content" href="#">
 					<img class="logo-content__icon" src="img/logo.svg" alt="Muscle">
 					<p class="logo-content__title">Shape<span>Up</span></p>
 				</a>
@@ -67,16 +67,20 @@
 				</nav>
 			</div>
 		</div>
+	</div>
+</header>
+<section class="main" style="background:#161616 url(img/header-bg.jpg) no-repeat center top / cover;" data-value="1">
+	<div class="container">
 		<div class="row">
 			<div class="col">
-				<div class="header-content">
-					<h1 class="header-content__title">
+				<div class="main-content">
+					<h1 class="main-content__title">
 						<span>BUild</span> Your Body <span>Transform</span> Your Life
 					</h1>
-					<p class="header-content__text">
+					<p class="main-content__text">
 						Curabitur ac volutpat odio. Nunc eget eros viverra, laoreet ligula eget, interdum augue. Pellentesque ornare mauris a hendrerit imperdiet.
 					</p>
-					<div class="header-content__btn d-flex">
+					<div class="main-content__btn d-flex">
 						<a class="gr-btn btn" href="#">Get Started</a>
 						<a class="tr-btn btn" href="#">Learn More</a>
 					</div>
@@ -84,7 +88,7 @@
 			</div>
 		</div>
 	</div>
-</header>
+</section>
 <section class="about" data-value="2">
 	<div class="container">
 		<div class="row align-items-center">
@@ -820,39 +824,6 @@
 						</li>
 					</ul>
 				</div>
-			</div>
-		</div>
-	</div>
-</section>
-<section class="navigation">
-	<div class="container">
-		<div class="row">
-			<div class="col d-flex justify-content-center">
-				<nav class="menu">
-					<ul class="d-flex justify-content-between">
-						<li>
-							<a href="#">Home</a>
-						</li>
-						<li>
-							<a href="#">About</a>
-						</li>
-						<li>
-							<a href="#">Trainers</a>
-						</li>
-						<li>
-							<a href="#">Service</a>
-						</li>
-						<li>
-							<a href="#">Reviews</a>
-						</li>
-						<li>
-							<a href="#">Price</a>
-						</li>
-						<li>
-							<a href="#">Blog</a>
-						</li>
-					</ul>
-				</nav>
 			</div>
 		</div>
 	</div>
