--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<p class="logo-content__title">Shape<span>Up</span></p>
 				</a>
 			</div>
-			<div class="col-lg-8 col-xl-7 ml-auto menu-grid">
+			<div class="col-lg-8 col-xl-7 ml-auto opened">
 				<nav class="menu">
 					<ul class="d-flex">
 						<li data-value="1" class="active">
@@ -60,11 +60,11 @@
 			</div>
 			<div class="col-3 col-sm-2 col-md-2 ml-auto menu-toggler-grid">
 				<div class="collapse" id="navbarToggleExternalContent"></div>
-				<nav class="navbar navbar-dark">
+				<div class="navbar navbar-dark">
 					<button class="navbar-dark navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="menu-toggler-icon"></span>
 					</button>
-				</nav>
+				</div>
 			</div>
 		</div>
 	</div>
