--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<p class="logo-content__title">Shape<span>Up</span></p>
 				</a>
 			</div>
-			<div class="col-lg-8 col-xl-7 ml-auto opened">
+			<div class="col-lg-8 col-xl-7 ml-auto dnone menu-parent">
 				<nav class="menu">
 					<ul class="d-flex">
 						<li data-value="1" class="active">
